--- a/src/main/resources/templates/three-choice-quiz/register.html
+++ b/src/main/resources/templates/three-choice-quiz/register.html
@@ -2,14 +2,17 @@
 <html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>登録画面</title>
+    <title>登録結果</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <meta charset="UTF-8"/>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"
           th:href="@{/webjars/bootstrap/4.2.1/css/bootstrap.min.css}" rel="stylesheet"/>
 </head>
-<body>
-<h3>登録画面</h3>
+<body id="resultPage">
+<p>登録完了</p>
+
+<a th:href="@{/index}" class="btn btn-info">TOP画面へ戻る</a>
+
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"
         th:src="@{/webjars/jquery/3.3.1/jquery.min.js}"></script>
