画面から任意の値を登録できるように修正

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,27 +15,39 @@
     <table class="table table-bordered">
         <tr>
             <td><label>問題文</label></td>
-            <td><input type="text" name="threeChoiceQuestion" th:value="及川の年齢は何歳？" /></td>
+            <td>
+                <input th:type="text" th:name="threeChoiceQuestion" th:required="required" />
+            </td>
         </tr>
         <tr>
             <td><label>選択肢A</label></td>
-            <td><input type="text" name="threeChoiceA" th:value="32才" /></td>
+            <td>
+                <input th:type="text" th:name="threeChoiceA" th:required="required" />
+            </td>
         </tr>
         <tr>
             <td><label>選択肢B</label></td>
-            <td><input type="text" name="threeChoiceB" th:value="33才" /></td>
+            <td>
+                <input th:type="text" th:name="threeChoiceB" th:required="required" />
+            </td>
         </tr>
         <tr>
             <td><label>選択肢C</label></td>
-            <td><input type="text" name="threeChoiceC" th:value="34才" /></td>
+            <td>
+                <input th:type="text" th:name="threeChoiceC" th:required="required" />
+            </td>
         </tr>
         <tr>
             <td><label>回答選択肢</label></td>
-            <td><input type="text" name="answerChoice" th:value="33才" /></td>
+            <td>
+                <input th:type="text" th:name="answerChoice" th:required="required" />
+            </td>
         </tr>
         <tr>
             <td><label>解説</label></td>
-            <td><input type="text" name="explanation" th:value="解説" /></td>
+            <td>
+                <input th:type="text" th:name="explanation" th:required="required" />
+            </td>
         </tr>
     </table>
 
