レビュー結果_単純ミスの修正

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -38,7 +38,7 @@
             </td>
         </tr>
         <tr>
-            <td><label>回答選択肢</label></td>
+            <td><label>正解選択肢</label></td>
             <td>
                 <input th:type="text" th:name="answerChoice" th:required="required" />
             </td>
