選択肢の持ち方を変更し、それに合わせコードを修正

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -22,25 +22,25 @@
         <tr>
             <td><label>選択肢A</label></td>
             <td>
-                <input th:type="text" th:name="threeChoiceA" th:required="required" />
+                <input th:type="text" th:name="threeChoiceSelectionItemA" th:required="required" />
             </td>
         </tr>
         <tr>
             <td><label>選択肢B</label></td>
             <td>
-                <input th:type="text" th:name="threeChoiceB" th:required="required" />
+                <input th:type="text" th:name="threeChoiceSelectionItemB" th:required="required" />
             </td>
         </tr>
         <tr>
             <td><label>選択肢C</label></td>
             <td>
-                <input th:type="text" th:name="threeChoiceC" th:required="required" />
+                <input th:type="text" th:name="threeChoiceSelectionItemC" th:required="required" />
             </td>
         </tr>
         <tr>
             <td><label>正解選択肢</label></td>
             <td>
-                <input th:type="text" th:name="answerChoice" th:required="required" />
+                <input th:type="text" th:name="answerChoiceSelectionItem" th:required="required" />
             </td>
         </tr>
         <tr>
